grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:    
  - name: grafana-ui
    port: 3000
  selector:
    app: grafana
