grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
  - host: grafana.boul.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  # - host: bar.localhost
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: service2
  #         servicePort: 80
  #     - backend:
  #         serviceName: service3
  #         servicePort: 80
